implemented tag repository, service and delivery layers
