# docs/swagger.yaml
@@ -36,11 +36,16 @@ definitions:
       created_at:
         type: string
       description:
+        description: 'TODO: implement images uploader'
         type: string
       id:
         type: string
       points:
         type: integer
+      tags:
+        items:
+          type: string
+        type: array
       title:
         type: string
       updated_at:
@@ -67,6 +72,15 @@ definitions:
     - MonthlySubscription
     - QuarterlySubscription
     - AnnualSubscription
+  domain.Tag:
+    properties:
+      country_id:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   domain.User:
     properties:
       achievements:
@@ -142,6 +156,13 @@ definitions:
         type: string
     type: object
   v1.questionUpdateRequest:
+    type: object
+  v1.tagCreateRequest:
+    properties:
+      country_id:
+        type: string
+      name:
+        type: string
     type: object
   v1.userRefreshRequest:
     properties:
@@ -442,6 +463,130 @@ paths:
       summary: Update question
       tags:
       - questions
+  /tags:
+    get:
+      consumes:
+      - application/json
+      description: Get all tags
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Tag'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+      summary: Get all
+      tags:
+      - tags
+    post:
+      consumes:
+      - application/json
+      description: Create new tag
+      parameters:
+      - description: Request
+        in: body
+        name: tagCreateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/v1.tagCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+      security:
+      - UserAuth: []
+      summary: Create
+      tags:
+      - tags
+  /tags/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get tag by ID
+      parameters:
+      - description: Tag ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Tag'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+      summary: Get by ID
+      tags:
+      - tags
+  /tags/country/{countryID}:
+    get:
+      consumes:
+      - application/json
+      description: Get tag by country ID
+      parameters:
+      - description: Country ID
+        in: path
+        name: countryID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Tag'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.errorResponse'
+      summary: Get by country ID
+      tags:
+      - tags
   /users:
     delete:
       consumes:
